Probando movimiento con porcentaje

--- a/css/estrellas/mainEstrellas.css
+++ b/css/estrellas/mainEstrellas.css
@@ -36,7 +36,7 @@ main{
         }
 
         .lebronJames.right{
-            transform: translateX(41.3rem);
+            transform: translateX(108.8%);
             transition-duration: 3s;
         }
 
