Terminadas todas las fotos, me falta ajustar el texto y escribir información

--- a/css/estrellas/mainEstrellas.css
+++ b/css/estrellas/mainEstrellas.css
@@ -86,7 +86,7 @@ main{
             text-align: justify;
             border: 0.05rem solid black;
             font-family: 'Rubik', sans-serif;
-            background-image: url(../../img/fondosWebComp/fondoBasket3.jpg);
+            background-image: url(../../img/parquet/parquet1.jpg);
             background-size: cover;
         }
 
@@ -165,7 +165,7 @@ main{
             text-align: justify;
             border: 0.05rem solid black;
             font-family: 'Rubik', sans-serif;
-            background-image: url(../../img/fondosWebComp/fondoBasket5.jpg);
+            background-image: url(../../img/parquet/parquet1.jpg);
             background-size: cover;
         }
 
@@ -243,7 +243,7 @@ main{
             text-align: justify;
             border: 0.05rem solid black;
             font-family: 'Rubik', sans-serif;
-            background-image: url(../../img/fondosWebComp/fondoBasket8.jpg);
+            background-image: url(../../img/parquet/parquet1.jpg);
             background-size: cover;
         }
 
