--- a/css/inicio/section.css
+++ b/css/inicio/section.css
@@ -59,21 +59,19 @@
 
 .description{
     grid-column: 1 / 3;
-    background-image: url(../../img/fondosWebComp/fondoBasket2.jpg);
+    background-image: url(../../img/fondosWebComp/fondoBasket6.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: top;
+    background-position: 100% 35%;
     display: grid;
-    grid-template-columns: 9% 35% 19% 30% 7%;
-    grid-template-rows: 7% 64% 29%;
+    grid-template-columns: 3% 37% 20% 37% 3%;
+    grid-template-rows: 10% auto 20%;
 }
 
 .firstText{
     grid-column: 2 / 3;
     grid-row: 2 / 3;
-    width: 100%;
     display: flex;
-    justify-content: center;
     align-items: center;
 }
 
@@ -81,6 +79,23 @@
     font-family: 'Rubik', sans-serif;
     text-align: justify;
     color: #221f1f;
-    line-height: 19pt;
-    font-size: 1em;
+    font-size: 1rem;
+    line-height: 140%;
+    text-shadow: 0.05rem 0.05rem #1D418B;
+}
+
+.secondText{
+    grid-column: 4 / 5;
+    grid-row: 2 / 3;
+    display: flex;
+    align-items: center;
+}
+
+.secondText p{
+    font-family: 'Rubik', sans-serif;
+    text-align: justify;
+    color: #221f1f;
+    font-size: 1rem;
+    line-height: 140%;
+    text-shadow: 0.05rem 0.05rem #C90E2F;
 }
