--- a/css/inicio/section.css
+++ b/css/inicio/section.css
@@ -19,8 +19,8 @@
 
 .firstPart{
     display: grid;
-    grid-template-rows: 55vh 30vh;
     grid-template-columns: 50% 50%;
+    grid-template-rows: 55vh 30vh;
 }
 
 .firstView{
@@ -64,8 +64,8 @@
     background-repeat: no-repeat;
     background-position: 100% 35%;
     display: grid;
-    grid-template-columns: 3% auto 15% 5% auto 3%;
-    grid-template-rows: 10% auto 20%;
+    grid-template-columns: 3% auto 10% 10% auto 3%;
+    grid-template-rows: 11% 78% 11%;
 }
 
 .firstText{
@@ -84,6 +84,20 @@
     font-size: 1rem;
     line-height: 145%;
     text-shadow: 0.05rem 0.05rem #1D418B;
+}
+
+.flecha1{
+    grid-column: 4 / 5;
+    grid-row: 2 / 3;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-weight: 500;
+    font-family: 'Rubik', sans-serif;
+    font-size: 3rem;
+    background: -webkit-linear-gradient(0deg, #1D418B, #C90E2F);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
 }
 
 .secondText{
