--- a/css/estrellas/mainEstrellas.css
+++ b/css/estrellas/mainEstrellas.css
@@ -17,7 +17,7 @@ main{
         background-size: cover;
         display: grid;
         grid-template-columns: 3% 45% 4% 45% 3%;
-        grid-template-rows: 3vh auto 3vh 52vh 3vh 52vh 3vh;
+        grid-template-rows: 3vh 58vh 3vh 52vh 3vh 52vh 3vh;
     }
 
         .flechas{
@@ -80,16 +80,15 @@ main{
             grid-column: 4 / 5;
             grid-row: 2 / 3;
             padding: 1rem;
-            display: flex;
-            flex-direction: column;
-            justify-content: center;
-            text-align: justify;
             border: 0.05rem solid black;
             font-family: 'Rubik', sans-serif;
             background-image: url(../../img/parquet/parquet1.jpg);
             background-size: cover;
-            padding: 5%;
-            line-height: 250%;
+            text-align: justify;
+            display: grid;
+            justify-items: center;
+            align-items: center;
+            line-height: 270%;
         }
 
             .lebronPerfil{
